# SkillHub

./: DESIGN.md  README.md  dev-status.sh  docker-compose.yml  package-lock.json  package.json  start.sh
.next/: trace  trace-build
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  init.sql  schema.sql  seed.sql
backend/migration/src/: lib.rs  m20240101_000001_create_tables.rs
backend/src/: main.rs
frontend/: .env.example  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/setup/: page.tsx
frontend/src/app/skills/: page.tsx
frontend/src/app/skills/[id]/: page.tsx
frontend/src/lib/: api.ts
frontend/src/locales/: en.json  zh.json
