[package]
name = "skillhub-api"
version = "0.1.0"
edition = "2021"
authors = ["SkillHub Team"]

[[bin]]
path = "src/main.rs"
name = "skillhub-api"

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "=0.4.31", default-features = false }
uuid = { version = "1.6", features = ["v4"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
once_cell = "1.19"
dotenvy = "0.15"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
