[package]
name = "skillhub-api"
version = "0.1.0"
edition = "2021"
authors = ["SkillHub Team"]

[[bin]]
path = "src/main.rs"
name = "skillhub-api"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
once_cell = "1.19"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
argon2 = "0.4"
rand = "0.8"
jsonwebtoken = "9"
hyper = "1.0"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
